--- a/pom.xml
+++ b/pom.xml
@@ -117,9 +117,12 @@
             <version>7.8.0</version>
         </dependency>
 
-      
-     
-     
+        <!-- YAML Parser -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.0</version>
+        </dependency>
 
         <!-- Cucumber Reports -->
         <dependency>
